@@ -1,3 +1,11 @@
+2011-09-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-sum.el (gnus-summary-show-article): Bind `shr-ignore-cache' to
+	re-fetch images.
+
+	* shr.el (shr-tag-img): Support a new variable `shr-ignore-cache' to
+	re-fetch images when hitting `g' in Gnus.
+
 2011-09-22  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mml.el (mml-inhibit-compute-boundary): New internal variable.
